external-crates/move/move-compiler/tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.exp
error[E05001]: ability constraint not satisfied
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.move:6:17
  │
2 │     struct CupC<T: copy> { f: T }
  │                    ---- 'copy' constraint declared here
3 │     struct R {}
  │            - To satisfy the constraint, the 'copy' ability would need to be added here
  ·
6 │         let _x: CupC<R> = abort 0;
  │                 ^^^^^^^
  │                 │    │
  │                 │    The type '0x8675309::M::R' does not have the ability 'copy'
  │                 'copy' constraint not satisifed

warning[W09004]: unnecessary trailing semicolon
  ┌─ tests/move_check/typing/constraints_not_satisfied_lvalues_bind_type.move:6:34
  │
6 │         let _x: CupC<R> = abort 0;
  │                           -------^
  │                           │      │
  │                           │      Invalid trailing ';'
  │                           │      A trailing ';' in an expression block implicitly adds a '()' value after the semicolon. That '()' value will not be reachable
  │                           Any code after this expression will not be reached
  │
  = This warning can be suppressed with '#[allow(unused_trailing_semi)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

